update cmake for unit test to run on window

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,15 +1,35 @@
 cmake_minimum_required(VERSION 3.12)
 project(BSTTest)
-find_package(GTest REQUIRED)
+
+message("GTEST_LIB_DIR: $ENV{GTEST_LIB_DIR}")
+message("GTEST_INCLUDE_DIR: $ENV{GTEST_INCLUDE_DIR}")
 
 # Add the executable for the tests
 add_executable(BSTTest BSTTest.cpp ../src/BST.cpp ../src/ServerModel.cpp ../src/Node.cpp)
 
-# Specify the include directories
-target_include_directories(BSTTest PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../include)
 
-# Link the GTest library
-target_link_libraries(BSTTest GTest::GTest GTest::Main)
+
+# Check if the platform is Windows
+if(WIN32)
+    set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MTd")
+    set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MT")
+    set(GTEST_LIB_DIR $ENV{GTEST_LIB_DIR}) # => set(GTEST_LIB_DIR "C:/Libraries/gtest/googletest/build/lib/Debug")
+
+    target_link_libraries(BSTTest
+        ${GTEST_LIB_DIR}/gmock.lib
+        ${GTEST_LIB_DIR}/gmock_main.lib
+        ${GTEST_LIB_DIR}/gtest.lib
+        ${GTEST_LIB_DIR}/gtest_main.lib
+    )
+
+    target_include_directories(BSTTest PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../include $ENV{GTEST_INCLUDE_DIR}) =>  "C:/Libraries/gtest/googletest/googletest/include")
+
+elseif(UNIX AND NOT APPLE)
+    find_package(GTest REQUIRED)
+    target_include_directories(BSTTest PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../include)
+    target_link_libraries(BSTTest GTest::GTest GTest::Main)
+    
+endif()
 
 # Set the C++ standard to C++11
 set_property(TARGET BSTTest PROPERTY CXX_STANDARD 11)
